--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           />
           <input
             name="amount"
-            type="text"
+            type="number"
             id="przychody_kwota"
             value=""
             placeholder="Kwota"
@@ -36,7 +36,7 @@
         <div id="header_wydatki">
           <h2>WYDATKI</h2>
           <input type="text" id="wydatki_rodzaj" placeholder="Nazwa wydatku" />
-          <input type="text" id="wydatki_kwota" placeholder="Kwota" />
+          <input type="number" id="wydatki_kwota" placeholder="Kwota" />
           <button id="btn_add_expenses">Dodaj</button>
         </div>
         <ul id="lista_wydatki"></ul>
